[package]
name = "proc-util"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "rotate_test"
path = "tests/rotate_test.rs"

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
